fix: blog featured image overflow

--- a/app/blog/[slug]/index.module.scss
+++ b/app/blog/[slug]/index.module.scss
@@ -30,11 +30,13 @@
 
 .mediaGutter {
   margin-bottom: calc(var(--base) * 4);
-  margin-left: calc(var(--gutter-h) / -2);
-  margin-right: calc(var(--gutter-h) / -2);
+  margin-left: calc(var(--gutter-h) / 2);
+  margin-right: calc(var(--gutter-h) / 2);
   
   @include mid-break {
     margin-bottom: calc(var(--base) * 2);
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
